// Copyright AGNTCY Contributors (https://github.com/agntcy)
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package core.v1alpha1;

message Signature {
  // The signature algorithm used (e.g., "ECDSA_P256_SHA256")
  string algorithm = 1;
  
  // Base64-encoded signature
  string signature = 2;
  
  // Public key or certificate used for verification
  string key_id = 3;
  
  // Optional URL to a transparency log entry
  optional string tlog_url = 4;
  
  // Timestamp when signing occurred
  string signed_at = 5;
}
